--- a/FRONT-UBER-APP/src/app/components/map-component/map.component.html
+++ b/FRONT-UBER-APP/src/app/components/map-component/map.component.html
@@ -1,2 +1,6 @@
 <p>map-component works!</p>
+<button class="btn btn-primary">Click me!</button>
+<button ngbButton>Click me!</button>
+<button mat-button>Click me!</button>
+<button mdbBtn color="primary">Click me!</button>
 <div id="map" style="height: 600px;width: 90%;margin-left: 5%;"></div>
