--- a/FRONT-UBER-APP/src/styles.css
+++ b/FRONT-UBER-APP/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
+/* @import '~@fortawesome/fontawesome-free/css/all.css'; */
+/* @import "~@ng-bootstrap/ng-bootstrap/datepicker/datepicker.css"; */
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
