--- a/FRONT-UBER-APP/src/app/components/citizen-home/citizen-home.component.html
+++ b/FRONT-UBER-APP/src/app/components/citizen-home/citizen-home.component.html
@@ -1,2 +1,34 @@
 <app-citizen-menu></app-citizen-menu>
-<p>citizen-home works!</p>
+
+<div class="container" style="margin-top: 5em;">
+  <div class="row justify-content-center d-flex">
+    <div class="col-8 col-md-8 text-center">
+      <app-citizen-home-ride-form></app-citizen-home-ride-form>
+    </div>
+  </div>
+</div>
+<!-- <p>citizen-home works!</p> -->
+<div class="container" style="margin-top: 5em;">
+  <div class="row">
+    <div class="col-md-3">
+      <app-citizen-home-routes-view></app-citizen-home-routes-view>
+    </div>
+    <div class="col-md-9">
+      <app-map-component></app-map-component>
+    </div>
+  </div>
+</div>
+
+<!-- <div style="margin-top: 350em;position: fixed;">
+  <div>
+    <div>
+      <app-citizen-home-ride-form></app-citizen-home-ride-form>
+    </div>
+  </div>
+</div> -->
+
+
+
+<div style="margin-top: 10em;">
+  PRAZNO
+</div>
