--- a/FRONT-UBER-APP/src/app/components/citizen-menu/citizen-menu.component.html
+++ b/FRONT-UBER-APP/src/app/components/citizen-menu/citizen-menu.component.html
@@ -19,7 +19,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','trademark']" mdbWavesEffect> <button class="nav-item"
+        <a class="nav-link waves-light" [routerLink]="['/','d3']" mdbWavesEffect> <button class="nav-item"
             style="border: 0;background-color: #4f96d8;color: white;" type="button">Trademark</button></a>
       </li>
 
@@ -28,11 +28,11 @@
     </ul>
     <!-- Links -->
 
-    <ul class="navbar-nav ml-auto nav-flex-icons">
+    <ul class="navbar-nav ml-auto nav-flex-icons" style="position: absolute; right: 1em;">
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/','login']">
-          <button class="nav-item" style="border: 0;background-color: #4f96d8;color: white;margin-left:1100px;"
-            type="button"><i (click)="logout()" class="fa fa-sign-out  fa-2x" aria-hidden="true"></i></button>
+          <button class="nav-item" style="border: 0;background-color: #4f96d8;color: white;" type="button"><i
+              (click)="logout()" class="fa fa-sign-out  fa-2x" aria-hidden="true"></i></button>
         </a>
       </li>
 
