--- a/FRONT-UBER-APP/src/app/components/admin-menu/admin-menu.component.html
+++ b/FRONT-UBER-APP/src/app/components/admin-menu/admin-menu.component.html
@@ -13,16 +13,22 @@
         <a class="nav-link waves-light" mdbWavesEffect>NVT-KTS-2023</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','citizen-home']" mdbWavesEffect>
+        <a class="nav-link waves-light" [routerLink]="['/','admin-home']" mdbWavesEffect>
           <button class="nav-item" style="border: 0;background-color: #ce7676;color: white;"
             type="button">Home</button></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','trademark']" mdbWavesEffect> <button class="nav-item"
-            style="border: 0;background-color: #ce7676;color: white;" type="button">Trademark</button></a>
+        <a class="nav-link waves-light" [routerLink]="['/','admin-citizen-chat']" mdbWavesEffect> <button
+            class="nav-item" style="border: 0;background-color: #ce7676;color: white;" type="button">Citizen
+            Chat</button></a>
       </li>
 
+      <li class="nav-item">
+        <a class="nav-link waves-light" [routerLink]="['/','admin-driver-chat']" mdbWavesEffect> <button
+            class="nav-item" style="border: 0;background-color: #ce7676;color: white;" type="button">Driver
+            Chat</button></a>
+      </li>
 
 
     </ul>
