--- a/FRONT-UBER-APP/src/app/components/citizen-menu/citizen-menu.component.html
+++ b/FRONT-UBER-APP/src/app/components/citizen-menu/citizen-menu.component.html
@@ -19,8 +19,8 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','d3']" mdbWavesEffect> <button class="nav-item"
-            style="border: 0;background-color: #4f96d8;color: white;" type="button">Trademark</button></a>
+        <a class="nav-link waves-light" [routerLink]="['/','citizen-chat']" mdbWavesEffect> <button class="nav-item"
+            style="border: 0;background-color: #4f96d8;color: white;" type="button">Chat</button></a>
       </li>
 
 
