--- a/FRONT-UBER-APP/src/app/components/driver-menu/driver-menu.component.html
+++ b/FRONT-UBER-APP/src/app/components/driver-menu/driver-menu.component.html
@@ -13,14 +13,14 @@
         <a class="nav-link waves-light" mdbWavesEffect>NVT-KTS-2023</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','citizen-home']" mdbWavesEffect>
+        <a class="nav-link waves-light" [routerLink]="['/','driver-home']" mdbWavesEffect>
           <button class="nav-item" style="border: 0;background-color: #51ca54;color: white;"
             type="button">Home</button></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','trademark']" mdbWavesEffect> <button class="nav-item"
-            style="border: 0;background-color: #51ca54;color: white;" type="button">Trademark</button></a>
+        <a class="nav-link waves-light" [routerLink]="['/','driver-chat']" mdbWavesEffect> <button class="nav-item"
+            style="border: 0;background-color: #51ca54;color: white;" type="button">Chat</button></a>
       </li>
 
 
