--- a/FRONT-UBER-APP/src/app/components/citizen-notification-ride-start/citizen-notification-ride-start.component.html
+++ b/FRONT-UBER-APP/src/app/components/citizen-notification-ride-start/citizen-notification-ride-start.component.html
@@ -5,6 +5,6 @@
     <p class="card-text">{{rideNotification.text}}</p>
     <h5 class="card-title">YOUR PRICE:</h5>
     <p class="card-text">{{rideNotification.price}}</p>
-    <b (click)="acceptRide()" class="btn btn-primary">ACCEPT</b>
+    <b id="notification-button" (click)="acceptRide()" class="btn btn-primary">ACCEPT</b>
   </div>
 </div>
