--- a/FRONT-UBER-APP/src/app/components/driver-menu/driver-menu.component.html
+++ b/FRONT-UBER-APP/src/app/components/driver-menu/driver-menu.component.html
@@ -34,8 +34,8 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','driver-notification']" mdbWavesEffect> <button
-            class="nav-item" style="border: 0;background-color: #51ca54;color: white;"
+        <a id="notification-link-driver" class="nav-link waves-light" [routerLink]="['/','driver-notification']"
+          mdbWavesEffect> <button class="nav-item" style="border: 0;background-color: #51ca54;color: white;"
             type="button">NOTIFICATION</button></a>
       </li>
 
