--- a/FRONT-UBER-APP/src/app/components/citizen-home-ride-form/citizen-home-ride-form.component.html
+++ b/FRONT-UBER-APP/src/app/components/citizen-home-ride-form/citizen-home-ride-form.component.html
@@ -77,7 +77,7 @@
     <!-- <label for="exampleInputUser" class="form-label">User</label> -->
     <input type="user" formControlName="user" class="form-control" id="exampleInputUser" aria-describedby="userHelp">
   </div>
-  <button type="submit" class="btn btn-primary" (click)="add_user()">+</button>
+  <button id="add-user-button" type="submit" class="btn btn-primary" (click)="add_user()">+</button>
 </form>
 
 
@@ -85,12 +85,16 @@
 
 <div *ngFor="let user of this.users">
   <p style="display: inline-block; margin-right: 1em;"><b>{{ user }} </b></p>
-  <button type="submit" class="btn btn-danger" (click)="delete_user(user)"
+  <button type="submit" class="btn btn-danger block-button" (click)="delete_user(user)"
     style="margin-top: -0.2em;display: inline-block;"><b>X</b></button>
 </div>
 
 <div style="height: 20px;"></div>
-<p *ngIf="total_price > 0"><b>TOTAL PRICE: {{total_price}}</b></p>
-<div><button class="btn btn-warning" (click)="calculate_price()">CALCULATE!</button></div>
+<p id="total-price" *ngIf="total_price > 0"><b>TOTAL PRICE: {{total_price}}</b></p>
+<div><button id="calculate-button" class="btn btn-warning" (click)="calculate_price()">CALCULATE!</button></div>
 <div style="height: 20px;"></div>
-<div><button class="btn btn-success" [disabled]="isBlock" (click)="make_ride()">RIDE!</button></div>
+<b>
+  <p id="ride-wrong" *ngIf="noDriver" style="color: red;">WRONG RIDE!</p>
+</b>
+<div><button id="ride-button" class="btn btn-success" [disabled]="isBlock" (click)="make_ride()">RIDE!</button>
+</div>
