--- a/FRONT-UBER-APP/src/app/components/reset-password/reset-password.component.html
+++ b/FRONT-UBER-APP/src/app/components/reset-password/reset-password.component.html
@@ -33,8 +33,8 @@
 
 
 
-    <button type="submit" class="btn btn-primary" (click)="resetPassword()" style="margin-top: 2em;">Register
-      Driver</button>
+    <button id="reset-button" type="submit" class="btn btn-primary" (click)="resetPassword()"
+      style="margin-top: 2em;">Reset</button>
   </form>
 
 </div>
